--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+/* estilos 1 - 4 */
+/*
 body{
     background-color: #d1d1d1;
     margin: 0px;
@@ -55,3 +57,5 @@ nav ul li a:hover{
     float: right;
     width: 2.5%;
 }
+*/
+
