--- a/css/style.css
+++ b/css/style.css
@@ -193,6 +193,7 @@ a{
 */
 
 /*estilo 8*/
+/*
 @media (max-width:380px){
        body{
            background-color: whitesmoke;
@@ -249,3 +250,4 @@ a{
         display: none;
     }
 }
+*/
