--- a/css/style.css
+++ b/css/style.css
@@ -251,3 +251,71 @@ a{
     }
 }
 */
+
+/*estilo 10*/
+ul{
+    margin: 0px;
+    padding: 0px;
+    list-style: none;
+}
+.menu{
+    background-color: darkslategray;
+    margin-bottom:  20px;
+}
+.menu li{
+     display:inline-block; 
+}
+.menu li a{
+      display:block;
+      padding:  10px 15px;
+      color:whitesmoke;
+      text-decoration: none;
+}
+.menu li a:hover{
+    background-color: rgb(86, 129, 129);
+}
+
+.lista{
+    margin-bottom: 20px;
+}
+
+.lista li {
+    border: 1px solid #999;
+    border-top:transparent;
+    width: 180px;
+}
+
+.lista li a{
+    color:darkgrey;
+    display:block;
+    padding: 10px 0px 10px 10px;
+    text-decoration: none;
+}
+.lista li:first-child{
+    border-top:1px solid #999; 
+    border-radius: 10px 10px 0px 0px;
+}
+
+.lista li:last-child{
+    border-radius: 0px 0px 10px 10px;
+}
+
+.lista li:nth-child(odd){
+    background-color: #f4f4f4;
+}
+
+.redes li{
+     display:inline-block;
+     margin-right: 10px;
+     background-color: #00aced;
+     text-align: center;
+     width: 50px;
+     height: 50px;
+     border-radius: 50px;
+}
+
+.redes li a {
+    font-size: 24px;
+    color:#fff;
+    line-height: 50px;
+}
